Add round corners to random button in nav

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul class="right hide-on-med-and-down">
           <li><a href="#" class="black-text"><i class="material-icons left">search</i>search</a></li>
           <li><a href="#" class="black-text"><i class="material-icons left">info</i>about</a></li>
-          <li><a href="#" class="btn waves-effect waves-light no-uppercase red">random poem</a></li>
+          <li><a href="#" class="btn waves-effect waves-light rounded-corners no-uppercase red">random poem</a></li>
         </ul>
         <!-- Hamburger menu (mobile) navigation -->
         <ul class="side-nav" id="nav-mobile">
