Add linear gradient background to index.html

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   <header>
     <nav class="transparent z-depth-0">
       <div class="nav-wrapper container">
-        <a href="#" class="brand-logo black-text">Logo</a>
+        <a href="#" class="brand-logo white-text">Logo</a>
         <a href="#" data-activates="nav-mobile" class="button-collapse black-text"><i class="material-icons">menu</i></a>
         <!-- Desktop navigation -->
         <ul class="right hide-on-med-and-down">
-          <li><a href="#" class="black-text"><i class="material-icons left">search</i>search</a></li>
-          <li><a href="#" class="black-text"><i class="material-icons left">info</i>about</a></li>
+          <li><a href="#" class="white-text"><i class="material-icons left">search</i>search</a></li>
+          <li><a href="#" class="white-text"><i class="material-icons left">info</i>about</a></li>
           <li><a href="#" class="btn waves-effect waves-light rounded-corners no-uppercase red">random poem</a></li>
         </ul>
         <!-- Hamburger menu (mobile) navigation -->
