Add grey divider underneath nav bar

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </ul>
       </div> <!-- end container -->
     </nav> <!-- end navigation -->
+    <div class="divider grey"></div>
   </header>
 </body>
 </html>
