--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header>
     <nav class="transparent z-depth-0">
       <div class="nav-wrapper container">
-        <a href="#" class="brand-logo white-text">Logo</a>
+        <a href="#" class="brand-logo white-text">undertone</a>
         <a href="#" data-activates="nav-mobile" class="button-collapse black-text"><i class="material-icons">menu</i></a>
         <!-- Desktop navigation -->
         <ul class="right hide-on-med-and-down">
