Update landing page to include project description

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="transparent z-depth-0">
       <div class="nav-wrapper container">
         <a href="#" class="brand-logo white-text">undertone</a>
-        <a href="#" data-activates="nav-mobile" class="button-collapse black-text"><i class="material-icons">menu</i></a>
+        <a href="#" data-activates="nav-mobile" class="button-collapse white-text"><i class="material-icons">menu</i></a>
         <!-- Desktop navigation -->
         <ul class="right hide-on-med-and-down">
           <li><a href="#" class="white-text"><i class="material-icons left">search</i>search</a></li>
@@ -43,7 +43,13 @@
         </ul>
       </div> <!-- end container -->
     </nav> <!-- end navigation -->
-    <div class="divider grey"></div>
+    <div class="divider grey"></div> <!-- navigation divider -->
   </header>
+  <main>
+    <div class="container center-align">
+      <h1 class="section grey-text text-lighten-2">Poetry in Color</h1>
+      <h5 class="grey-text text-lighten-3">analyze poems for a variety of tones to uniquely liven the prose's presentation</h5>
+    </div>
+  </main>
 </body>
 </html>
