--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h5 class="grey-text text-lighten-3">analyze poems for a variety of tones to uniquely liven the prose's presentation</h5>
       <div class="row section">
         <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
+          <div class="card emotion-card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title red-text text-lighten-3">Anger</span>
               <p>a strong feeling of annoyance, displeasure, or hostility</p>
@@ -59,15 +59,15 @@
           </div>
         </div>
         <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
+          <div class="card emotion-card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title deep-purple-text text-lighten-3">Disgust</span>
-              <p>a feeling of revulsion or profound disapproval aroused by something unpleasan</p>
+              <p>a feeling of revulsion or profound disapproval aroused by something unpleasant</p>
             </div>
           </div>
         </div>
         <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
+          <div class="card emotion-card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title green-text text-lighten-3">Fear</span>
               <p>an unpleasant emotion caused by the belief that someone or something is dangerous, likely to cause pain, or a threat</p>
@@ -77,7 +77,7 @@
       </div>
       <div class="row">
         <div class="col s12 m4 offset-m2">
-          <div class="card blue-grey darken-1">
+          <div class="card emotion-card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title yellow-text text-lighten-3">Joy</span>
               <p>a feeling of great pleasure and happiness</p>
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
+          <div class="card emotion-card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title blue-text text-lighten-3">Sadness</span>
               <p>affected by unhappiness or grief</p>
