--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
               <span class="card-title red-text text-lighten-3">Anger</span>
               <p>a strong feeling of annoyance, displeasure, or hostility</p>
             </div>
-          </div>
-        </div>
+          </div> <!-- end card -->
+        </div> <!-- end column -->
         <div class="col s12 m4">
           <div class="card emotion-card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title deep-purple-text text-lighten-3">Disgust</span>
               <p>a feeling of revulsion or profound disapproval aroused by something unpleasant</p>
             </div>
-          </div>
-        </div>
+          </div> <!-- end card -->
+        </div> <!-- end column -->
         <div class="col s12 m4">
           <div class="card emotion-card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title green-text text-lighten-3">Fear</span>
               <p>an unpleasant emotion caused by the belief that someone or something is dangerous, likely to cause pain, or a threat</p>
             </div>
-          </div>
-        </div>
-      </div>
+          </div> <!-- end card -->
+        </div> <!-- end column -->
+      </div> <!-- end row -->
       <div class="row">
         <div class="col s12 m4 offset-m2">
           <div class="card emotion-card blue-grey darken-1">
@@ -82,18 +82,18 @@
               <span class="card-title yellow-text text-lighten-3">Joy</span>
               <p>a feeling of great pleasure and happiness</p>
             </div>
-          </div>
-        </div>
+          </div> <!-- end card -->
+        </div> <!-- end column -->
         <div class="col s12 m4">
           <div class="card emotion-card blue-grey darken-1">
             <div class="card-content white-text">
               <span class="card-title blue-text text-lighten-3">Sadness</span>
               <p>affected by unhappiness or grief</p>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
+          </div> <!-- end card -->
+        </div> <!-- end column -->
+      </div> <!-- end row -->
+    </div> <!-- end container -->
   </main>
 </body>
 </html>
