--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
           </div> <!-- end card -->
         </div> <!-- end column -->
       </div> <!-- end row -->
+      <div class="divider"></div>
+      <div class="section">
+        <h2 class="grey-text text-lighten-3">Let's Get Started</h2>
+        <a class="waves-effect waves-light btn-large rounded-corners red">Random Poem</a>
+      </div>
     </div> <!-- end container -->
   </main>
 </body>
