Create footer with navigation links

--- a/index.html
+++ b/index.html
@@ -100,5 +100,26 @@
       </div>
     </div> <!-- end container -->
   </main>
+  <footer class="page-footer blue-grey darken-3">
+    <div class="container">
+      <div class="row">
+        <div class="col m6 s12">
+          <h5 class="white-text">Undertone</h5>
+          <p class="grey-text text-lighten-4">Poetry in Color</p>
+        </div>
+        <div class="col m4 offset-m2 s12">
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Search</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Random</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      A Project by Aidan
+    </div>
+  </footer>
 </body>
 </html>
