--- a/index.html
+++ b/index.html
@@ -24,82 +24,84 @@
   <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
-  <header>
-    <nav class="transparent z-depth-0">
-      <div class="nav-wrapper container">
-        <a href="#" class="brand-logo white-text">undertone</a>
-        <a href="#" data-activates="nav-mobile" class="button-collapse white-text"><i class="material-icons">menu</i></a>
-        <!-- Desktop navigation -->
-        <ul class="right hide-on-med-and-down">
-          <li><a href="#" class="white-text"><i class="material-icons left">search</i>search</a></li>
-          <li><a href="#" class="white-text"><i class="material-icons left">info</i>about</a></li>
-          <li><a href="#" class="btn waves-effect waves-light rounded-corners no-uppercase red">random poem</a></li>
-        </ul>
-        <!-- Hamburger menu (mobile) navigation -->
-        <ul class="side-nav" id="nav-mobile">
-          <li><a href="#">Search</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Random</a></li>
-        </ul>
+  <div id="gradient">
+    <header>
+      <nav class="transparent z-depth-0">
+        <div class="nav-wrapper container">
+          <a href="#" class="brand-logo white-text">undertone</a>
+          <a href="#" data-activates="nav-mobile" class="button-collapse white-text"><i class="material-icons">menu</i></a>
+          <!-- Desktop navigation -->
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#" class="white-text"><i class="material-icons left">search</i>search</a></li>
+            <li><a href="#" class="white-text"><i class="material-icons left">info</i>about</a></li>
+            <li><a href="#" class="btn waves-effect waves-light rounded-corners no-uppercase red">random poem</a></li>
+          </ul>
+          <!-- Hamburger menu (mobile) navigation -->
+          <ul class="side-nav" id="nav-mobile">
+            <li><a href="#">Search</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Random</a></li>
+          </ul>
+        </div> <!-- end container -->
+      </nav> <!-- end navigation -->
+      <div class="divider grey"></div> <!-- navigation divider -->
+    </header>
+    <main>
+      <div class="container center-align">
+        <h1 class="section grey-text text-lighten-2">Poetry in Color</h1>
+        <h5 class="grey-text text-lighten-3">analyze poems for a variety of tones to uniquely liven the prose's presentation</h5>
+        <div class="row section" id="no-row-bottom-spacing">
+          <div class="col s12 m4">
+            <div class="card emotion-card blue-grey darken-2">
+              <div class="card-content white-text">
+                <span class="card-title red-text text-lighten-3">Anger</span>
+                <p>a strong feeling of annoyance, displeasure, or hostility</p>
+              </div>
+            </div> <!-- end card -->
+          </div> <!-- end column -->
+          <div class="col s12 m4">
+            <div class="card emotion-card blue-grey darken-2">
+              <div class="card-content white-text">
+                <span class="card-title deep-purple-text text-lighten-3">Disgust</span>
+                <p>a feeling of revulsion or profound disapproval aroused by something unpleasant</p>
+              </div>
+            </div> <!-- end card -->
+          </div> <!-- end column -->
+          <div class="col s12 m4">
+            <div class="card emotion-card blue-grey darken-2">
+              <div class="card-content white-text">
+                <span class="card-title green-text text-lighten-3">Fear</span>
+                <p>an unpleasant emotion caused by the belief that someone or something is dangerous, likely to cause pain, or a threat</p>
+              </div>
+            </div> <!-- end card -->
+          </div> <!-- end column -->
+        </div> <!-- end row -->
+        <div class="row">
+          <div class="col s12 m4 offset-m2">
+            <div class="card emotion-card blue-grey darken-2">
+              <div class="card-content white-text">
+                <span class="card-title yellow-text text-lighten-3">Joy</span>
+                <p>a feeling of great pleasure and happiness</p>
+              </div>
+            </div> <!-- end card -->
+          </div> <!-- end column -->
+          <div class="col s12 m4">
+            <div class="card emotion-card blue-grey darken-2">
+              <div class="card-content white-text">
+                <span class="card-title blue-text text-lighten-3">Sadness</span>
+                <p>affected by unhappiness or grief</p>
+              </div>
+            </div> <!-- end card -->
+          </div> <!-- end column -->
+        </div> <!-- end row -->
+        <div class="divider"></div>
+        <div class="section">
+          <h2 class="grey-text text-lighten-3">Let's Get Started</h2>
+          <a class="waves-effect waves-light btn-large rounded-corners red">Random Poem</a>
+        </div>
       </div> <!-- end container -->
-    </nav> <!-- end navigation -->
-    <div class="divider grey"></div> <!-- navigation divider -->
-  </header>
-  <main>
-    <div class="container center-align">
-      <h1 class="section grey-text text-lighten-2">Poetry in Color</h1>
-      <h5 class="grey-text text-lighten-3">analyze poems for a variety of tones to uniquely liven the prose's presentation</h5>
-      <div class="row section" id="no-row-bottom-spacing">
-        <div class="col s12 m4">
-          <div class="card emotion-card blue-grey darken-2">
-            <div class="card-content white-text">
-              <span class="card-title red-text text-lighten-3">Anger</span>
-              <p>a strong feeling of annoyance, displeasure, or hostility</p>
-            </div>
-          </div> <!-- end card -->
-        </div> <!-- end column -->
-        <div class="col s12 m4">
-          <div class="card emotion-card blue-grey darken-2">
-            <div class="card-content white-text">
-              <span class="card-title deep-purple-text text-lighten-3">Disgust</span>
-              <p>a feeling of revulsion or profound disapproval aroused by something unpleasant</p>
-            </div>
-          </div> <!-- end card -->
-        </div> <!-- end column -->
-        <div class="col s12 m4">
-          <div class="card emotion-card blue-grey darken-2">
-            <div class="card-content white-text">
-              <span class="card-title green-text text-lighten-3">Fear</span>
-              <p>an unpleasant emotion caused by the belief that someone or something is dangerous, likely to cause pain, or a threat</p>
-            </div>
-          </div> <!-- end card -->
-        </div> <!-- end column -->
-      </div> <!-- end row -->
-      <div class="row">
-        <div class="col s12 m4 offset-m2">
-          <div class="card emotion-card blue-grey darken-2">
-            <div class="card-content white-text">
-              <span class="card-title yellow-text text-lighten-3">Joy</span>
-              <p>a feeling of great pleasure and happiness</p>
-            </div>
-          </div> <!-- end card -->
-        </div> <!-- end column -->
-        <div class="col s12 m4">
-          <div class="card emotion-card blue-grey darken-2">
-            <div class="card-content white-text">
-              <span class="card-title blue-text text-lighten-3">Sadness</span>
-              <p>affected by unhappiness or grief</p>
-            </div>
-          </div> <!-- end card -->
-        </div> <!-- end column -->
-      </div> <!-- end row -->
-      <div class="divider"></div>
-      <div class="section">
-        <h2 class="grey-text text-lighten-3">Let's Get Started</h2>
-        <a class="waves-effect waves-light btn-large rounded-corners red">Random Poem</a>
-      </div>
-    </div> <!-- end container -->
-  </main>
+    </main>
+  </div>
   <footer class="page-footer blue-grey darken-3">
     <div class="container">
       <div class="row">
