--- a/index.html
+++ b/index.html
@@ -108,20 +108,21 @@
         <div class="col m6 s12">
           <h5 class="white-text">Undertone</h5>
           <p class="grey-text text-lighten-4">Poetry in Color</p>
-        </div>
+        </div> <!-- end column -->
         <div class="col m4 offset-m2 s12">
           <ul>
             <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Search</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Random</a></li>
           </ul>
-        </div>
-      </div>
-    </div>
+        </div> <!-- end column -->
+      </div> <!-- end row -->
+    </div> <!-- end container -->
     <div class="footer-copyright">
       <div class="container">
-      A Project by Aidan
-    </div>
+        A Project by Aidan
+      </div> <!-- end container -->
+    </div> <!-- end copyright -->
   </footer>
 </body>
 </html>
