--- a/index.html
+++ b/index.html
@@ -93,14 +93,31 @@
           </div> <!-- end card -->
         </div> <!-- end column -->
       </div> <!-- end row -->
-      <div class="divider"></div>
-      <div class="section">
-        <h2 class="grey-text text-lighten-3">Let's Get Started</h2>
-        <a class="waves-effect waves-light btn-large rounded-corners red">Random Poem</a>
-      </div>
     </div> <!-- end container -->
+    <div class="grey darken-4">
+      <div class="section center-align">
+        <h2 class="grey-text text-lighten-3">Let's Get Started</h2>
+      </div> <!-- end section -->
+    </div> <!-- end grey div -->
+    <div class="blue-grey center-align">
+      <div class="section">
+        <h4 class="grey-text text-lighten-3">Analyze a Random Poem</h4>
+        <p class="grey-text text-darken-4">Poets include Shakespeare, John Donne, Emily Dickinson...</p>
+        <a class="waves-effect waves-light btn-large rounded-corners red lighten-1"><i class="material-icons left">shuffle</i> Random Poem</a>
+      </div> <!-- end section -->
+      <div class="section">
+        <h4 class="grey-text text-lighten-3">Search for a Specific Poem</h4>
+        <p class="grey-text text-darken-4">Filter by poet, title, length, or a combination of the former</p>
+        <a class="waves-effect waves-light btn-large rounded-corners red lighten-1"><i class="material-icons left">search</i> Begin Search</a>
+      </div> <!-- end section -->
+      <div class="section bottom-padding">
+        <h4 class="grey-text text-lighten-3">Enter Your Own Poem</h4>
+        <p class="grey-text text-darken-4">Analyze custom text that is 1000 (placeholder) characters or less</p>
+        <a class="waves-effect waves-light btn-large rounded-corners red lighten-1"><i class="material-icons left">input</i> Enter Text</a>
+      </div> <!-- end section -->
+    </div> <!-- end blue-grey div -->
   </main>
-  <footer class="page-footer blue-grey darken-3">
+  <footer class="page-footer grey darken-4" id="no-top-margin">
     <div class="container">
       <div class="row">
         <div class="col m6 s12">
