Reorganize css and add id for second gradient

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
         <a class="waves-effect waves-light btn-large rounded-corners red lighten-1"><i class="material-icons left">input</i> Enter Text</a>
       </div> <!-- end section -->
     </div> <!-- end blue-grey div -->
+    <div id="second-gradient">
+
+    </div>
   </main>
   <footer class="page-footer grey darken-4" id="no-top-margin">
     <div class="container">
