--- a/index.html
+++ b/index.html
@@ -116,8 +116,21 @@
         <a class="waves-effect waves-light btn-large rounded-corners red lighten-1"><i class="material-icons left">input</i> Enter Text</a>
       </div> <!-- end section -->
     </div> <!-- end blue-grey div -->
-    <div id="second-gradient">
-
+    <div class="grey darken-4">
+      <div class="section center-align">
+        <h2 class="grey-text text-lighten-3">How it Works</h2>
+      </div> <!-- end section -->
+    </div> <!-- end grey div -->
+    <div class="blue-grey center-align">
+      <div class="section container">
+        <h4 class="grey-text text-lighten-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo repudiandae, quos similique. Dolore a enim ipsam minus, consequatur sequi ea, tempora atque eveniet aut vitae corrupti sapiente veniam similique at.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci illo, id veniam pariatur perferendis sed. Perspiciatis dolorem iste facere veritatis, autem aperiam. Ullam repellat in, officiis repellendus consectetur voluptatum enim!
+        </p>
+      </div>
     </div>
   </main>
   <footer class="page-footer grey darken-4" id="no-top-margin">
