--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Desktop navigation -->
         <ul class="right hide-on-med-and-down">
           <li><a href="#" class="white-text"><i class="material-icons left">search</i>search</a></li>
-          <li><a href="#" class="white-text"><i class="material-icons left">info</i>about</a></li>
+          <li><a href="#about" class="white-text"><i class="material-icons left">info</i>about</a></li>
           <li><a href="#" class="btn waves-effect waves-light rounded-corners no-uppercase red">random poem</a></li>
         </ul>
         <!-- Hamburger menu (mobile) navigation -->
@@ -118,7 +118,7 @@
     </div> <!-- end blue-grey div -->
     <div class="grey darken-4">
       <div class="section center-align">
-        <h2 class="grey-text text-lighten-3">How it Works</h2>
+        <h2 class="grey-text text-lighten-3" id="about">How it Works</h2>
       </div> <!-- end section -->
     </div> <!-- end grey div -->
     <div class="blue-grey center-align">
@@ -142,7 +142,7 @@
         </div> <!-- end column -->
         <div class="col m4 offset-m2 s12">
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+            <li><a class="grey-text text-lighten-3" href="#about">About</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Search</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Random</a></li>
           </ul>
