Change html to link to new file structure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- CSS -->
   <!-- Import Materialize CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- JavaScript -->
   <!-- Import jQuery -->
   <script
@@ -20,8 +20,8 @@
   <!-- Import Materialize JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js" defer></script>
   <!-- Initialize Materialize Components -->
-  <script type="text/javascript" src="init.js" defer></script>
-  <script type="text/javascript" src="script.js" defer></script>
+  <script type="text/javascript" src="js/init.js" defer></script>
+  <script type="text/javascript" src="js/script.js" defer></script>
 </head>
 <body>
   <header>
