Add modal comments and change icons

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Desktop navigation -->
         <ul class="right hide-on-med-and-down">
           <li><a href="#searchModal" class="modal-trigger white-text"><i class="material-icons left">search</i>search</a></li>
-          <li><a href="#about" class="white-text"><i class="material-icons left">info</i>about</a></li>
+          <li><a href="#about" class="white-text"><i class="material-icons left">info_outline</i>about</a></li>
           <li><a href="#" class="btn waves-effect waves-light rounded-corners no-uppercase red">random poem</a></li>
         </ul>
         <!-- Hamburger menu (mobile) navigation -->
@@ -159,21 +159,21 @@
     <form action="" method="post">
       <div class="modal-content grey lighten-2">
         <h4>Search for Poems</h4>
-        <div class="input-field">
-          <i class="material-icons prefix">account_circle</i>
+        <div class="input-field"> <!-- Poet -->
+          <i class="material-icons prefix">perm_identity</i>
           <input id="poet" type="text" class="validate">
           <label for="poet">Poet</label>
         </div>
-        <div class="input-field">
-          <i class="material-icons prefix">account_circle</i>
+        <div class="input-field"> <!-- Title -->
+          <i class="material-icons prefix">description</i>
           <input id="title" type="text" class="validate">
           <label for="title">Title</label>
         </div>
-      </div>
+      </div> <!-- end modal content -->
       <div class="modal-footer grey lighten-2">
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Search</a>
-      </div>
+      </div> <!-- end modal footer -->
     </form>
-  </div>
+  </div> <!-- end modal -->
 </body>
 </html>
