--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ul>
         <!-- Hamburger menu (mobile) navigation -->
         <ul class="side-nav" id="nav-mobile">
-          <li><a href="#">Search</a></li>
+          <li><a href="#searchModal" class="modal-trigger">Search</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Random</a></li>
         </ul>
@@ -186,9 +186,32 @@
         </h6>
       </div> <!-- end modal content -->
       <div class="modal-footer grey lighten-2">
-        <a href="#" class=" modal-action modal-close waves-effect waves-green btn-flat">Search</a>
+        <a href="#testModal" class="modal-action modal-close modal-trigger waves-effect waves-light btn-flat">Search</a>
       </div> <!-- end modal footer -->
     </form>
+  </div> <!-- end modal -->
+
+  <div id="testModal" class="modal modal-fixed-footer">
+    <div class="modal-content center grey lighten-2">
+      <h3>Loading Poems</h3>
+      <br><br>
+      <!-- loading circle -->
+      <div class="preloader-wrapper active">
+        <div class="spinner-layer spinner-red-only">
+          <div class="circle-clipper left">
+            <div class="circle"></div>
+          </div><div class="gap-patch">
+            <div class="circle"></div>
+          </div><div class="circle-clipper right">
+            <div class="circle"></div>
+          </div>
+        </div>
+      </div>
+      <!-- end loading circle -->
+    </div> <!-- end modal content -->
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat">Select</a>
+    </div> <!-- end modal footer -->
   </div> <!-- end modal -->
 </body>
 </html>
