Update mobile about link to go to how it works section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Hamburger menu (mobile) navigation -->
         <ul class="side-nav" id="nav-mobile">
           <li><a href="#searchModal" class="modal-trigger">Search</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#">Random</a></li>
         </ul>
       </div> <!-- end container -->
