--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <a href="#" data-activates="nav-mobile" class="button-collapse white-text"><i class="material-icons">menu</i></a>
         <!-- Desktop navigation -->
         <ul class="right hide-on-med-and-down">
-          <li><a href="#searchModal" class="modal-trigger white-text"><i class="material-icons left">search</i>search</a></li>
+          <li><a href="#searchModal" class="modal-trigger search white-text"><i class="material-icons left">search</i>search</a></li>
           <li><a href="#about" class="white-text"><i class="material-icons left">info_outline</i>about</a></li>
           <li><a href="#" class="btn waves-effect waves-light rounded-corners no-uppercase red">random poem</a></li>
         </ul>
         <!-- Hamburger menu (mobile) navigation -->
         <ul class="side-nav" id="nav-mobile">
-          <li><a href="#searchModal" class="modal-trigger">Search</a></li>
+          <li><a href="#searchModal" class="modal-trigger search">Search</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#">Random</a></li>
         </ul>
@@ -186,12 +186,12 @@
         </h6>
       </div> <!-- end modal content -->
       <div class="modal-footer grey lighten-2">
-        <a href="#testModal" class="modal-action modal-close modal-trigger waves-effect waves-light btn-flat">Search</a>
+        <a href="#poemModal" class="modal-action modal-trigger poems waves-effect waves-light btn-flat">Search</a>
       </div> <!-- end modal footer -->
     </form>
   </div> <!-- end modal -->
 
-  <div id="testModal" class="modal modal-fixed-footer">
+  <div id="poemModal" class="modal modal-fixed-footer">
     <div class="modal-content center grey lighten-2">
       <h3>Loading Poems</h3>
       <br><br>
