Add particles.js and create canvas in background

--- a/color.html
+++ b/color.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Colorful</title>
+  <!-- CSS -->
+  <!-- Import Materialize CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+  <link rel="stylesheet" href="css/color.css">
+  <!-- JavaScript -->
+  <!-- Import jQuery -->
+  <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous" defer></script>
+  <!-- Import Materialize JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js" defer></script>
+  <!-- Particles -->
+  <script type="text/javascript" src="js/particles.min.js" defer></script>
+  <script type="text/javascript" src="js/color.js" defer></script>
 </head>
 <body>
-
+  <div id="particles-js"></div>
 </body>
 </html>
