--- a/color.html
+++ b/color.html
@@ -22,6 +22,12 @@
   <script type="text/javascript" src="js/color.js" defer></script>
 </head>
 <body>
-  <div id="particles-js"></div>
+  <div id="particles-js">
+    <div class="text">
+      <h3 class="white-text"><em id="title"></em></h3>
+      <h4 class="white-text" id="poet"></h4>
+      <a class="btn-large waves-effect waves-light" id="btn-color">Begin</a>
+    </div>
+  </div>
 </body>
 </html>
