Add tone analyzer call and background color change

--- a/color.html
+++ b/color.html
@@ -26,8 +26,9 @@
   <div class="text">
     <h3 class="white-text"><em id="title"></em></h3>
     <h4 class="white-text" id="poet"></h4>
+    <!-- <div style="background-color: rgba(10, 10, 10, 0.3);"> -->
     <h4 class="white-text flow-text" id="stanza"></h4>
-    <a class="btn-large waves-effect waves-light" id="beginBtn">Begin</a>
+    <a class="btn-large waves-effect waves-light center-element" id="beginBtn">Begin</a>
   </div>
 </body>
 </html>
