--- a/color.html
+++ b/color.html
@@ -27,6 +27,11 @@
     <h3 class="white-text"><em id="title"></em></h3>
     <h4 class="white-text" id="poet"></h4>
     <!-- <div style="background-color: rgba(10, 10, 10, 0.3);"> -->
+    <div class="container">
+      <div class="progress">
+        <div class="indeterminate"></div>
+      </div>
+    </div>
     <h4 class="white-text flow-text" id="stanza"></h4>
     <a class="btn-large waves-effect waves-light center-element" id="beginBtn">Begin</a>
   </div>
