Restructure html and css

--- a/color.html
+++ b/color.html
@@ -22,18 +22,18 @@
   <script type="text/javascript" src="js/color.js" defer></script>
 </head>
 <body>
-  <div id="particles-js"></div>
-  <div class="text">
-    <h3 class="white-text"><em id="title"></em></h3>
-    <h4 class="white-text" id="poet"></h4>
-    <!-- <div style="background-color: rgba(10, 10, 10, 0.3);"> -->
+  <div id="particles-js">
     <div class="container">
       <div class="progress">
         <div class="indeterminate"></div>
       </div>
     </div>
-    <h4 class="white-text flow-text" id="stanza"></h4>
-    <a class="btn-large waves-effect waves-light center-element" id="beginBtn">Begin</a>
+  </div>
+  <a class="btn-large waves-effect waves-light center-element hide" id="beginBtn">Begin</a>
+  <div id="poem">
+    <h1 class="white-text" id="title"></h1>
+    <h2 class="white-text" id="poet"></h2>
+    <p class="white-text flow-text" id="stanza"></p>
   </div>
 </body>
 </html>
