--- a/color.html
+++ b/color.html
@@ -31,8 +31,8 @@
   </div>
   <a class="btn-large waves-effect waves-light center-element hide" id="beginBtn">Begin</a>
   <div id="poem">
-    <h1 class="white-text" id="title"></h1>
-    <h2 class="white-text" id="poet"></h2>
+    <h1 class="white-text hide" id="title"></h1>
+    <h2 class="white-text hide" id="poet"></h2>
     <p class="white-text flow-text" id="stanza"></p>
   </div>
 </body>
