--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <h3>Search for Poems</h3>
         <div class="input-field"> <!-- Poet -->
           <i class="material-icons prefix">perm_identity</i>
-          <input id="poet" type="text" class="autocomplete validate">
+          <input id="poet" type="text" class="autocomplete validate" autocomplete="off">
           <label for="poet">Poet</label>
         </div>
         <div class="input-field"> <!-- Title -->
