Change collapsible poems to be popouts

--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
         </div>
       </div>
       <!-- end loading circle -->
-      <ul class="collapsible hide" id="poemList" data-collapsible="accordion">
+      <ul class="collapsible popout hide" id="poemList" data-collapsible="accordion">
       </ul>
     </div> <!-- end modal content -->
     <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat">Select</a>
+      <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat">Close</a>
     </div> <!-- end modal footer -->
   </div> <!-- end modal -->
 </body>
