--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </header>
   <main>
     <div class="container center-align">
-      <h1 class="section grey-text text-lighten-2">Poetry in Color</h1>
+      <h1 class="section grey-text text-lighten-4">Poetry in Color</h1>
       <h5 class="grey-text text-lighten-3">analyze poems for a variety of tones to uniquely liven the prose's presentation</h5>
       <div class="row section" id="no-row-bottom-spacing">
         <div class="col s12 m4">
@@ -159,8 +159,8 @@
   <!-- modal -->
   <div id="searchModal" class="modal">
     <form action="" name="poems" method="post">
-      <div class="modal-content grey lighten-2">
-        <h3>Search for Poems</h3>
+      <div class="modal-content blue-grey lighten-5">
+        <h3 class="grey-text text-darken-3">Search for Poems</h3>
         <div class="input-field"> <!-- Poet -->
           <i class="material-icons prefix">perm_identity</i>
           <input id="poet" type="text" class="autocomplete validate" autocomplete="off">
@@ -185,14 +185,14 @@
           <br>
         </h6>
       </div> <!-- end modal content -->
-      <div class="modal-footer grey lighten-2">
+      <div class="modal-footer">
         <a href="#poemModal" class="modal-action modal-trigger poems waves-effect waves-light btn-flat" id="searchPoems">Search</a>
       </div> <!-- end modal footer -->
     </form>
   </div> <!-- end modal -->
 
   <div id="poemModal" class="modal modal-fixed-footer">
-    <div class="modal-content center grey lighten-2">
+    <div class="modal-content center blue-grey lighten-5">
       <h3 id="loadingPoems">Loading Poems<br></h3>
       <br>
       <!-- loading circle -->
