--- a/color.html
+++ b/color.html
@@ -8,6 +8,8 @@
   <!-- CSS -->
   <!-- Import Materialize CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
   <link rel="stylesheet" href="css/color.css">
   <!-- JavaScript -->
   <!-- Import jQuery -->
