Display Poem Not Found when search returns no results

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   <div id="poemModal" class="modal modal-fixed-footer">
     <div class="modal-content center blue-grey lighten-5">
       <h3 id="loadingPoems">Loading Poems<br></h3>
-      <br>
+      <h2 class="red-text text-lighten-2 hide" id="notFound"><br>No Poems Found</h2>
       <!-- loading circle -->
       <div class="preloader-wrapper active">
         <div class="spinner-layer spinner-red-only">
