Disable search unless text is present in inputs

--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
         </h6>
       </div> <!-- end modal content -->
       <div class="modal-footer">
-        <a href="#poemModal" class="modal-action modal-trigger poems waves-effect waves-light btn-flat" id="searchPoems">Search</a>
+        <button data-target="poemModal" disabled class="poems btn" id="searchPoems">Search</button>
+        <!-- <a href="#poemModal" class="modal-action modal-trigger poems waves-effect waves-light btn-flat disabled" id="searchPoems">Search</a> -->
       </div> <!-- end modal footer -->
     </form>
   </div> <!-- end modal -->
