Correct issue with allowing blank searches

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="input-field"> <!-- Title -->
           <i class="material-icons prefix">description</i>
-          <input id="title" type="text" class="validate">
+          <input id="title" type="text" class="validate" autocomplete="off">
           <label for="title">Title</label>
         </div>
         <div class="input-field"> <!-- Length -->
