Add basic random poem functionality

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul class="right hide-on-med-and-down">
           <li><a href="#searchModal" class="modal-trigger search white-text"><i class="material-icons left">search</i>search</a></li>
           <li><a href="#about" class="white-text"><i class="material-icons left">info_outline</i>about</a></li>
-          <li><a href="#" class="btn waves-effect waves-light rounded-corners no-uppercase red">random poem</a></li>
+          <li><a href="#" class="btn waves-effect waves-light rounded-corners no-uppercase red random">random poem</a></li>
         </ul>
         <!-- Hamburger menu (mobile) navigation -->
         <ul class="side-nav" id="nav-mobile">
