Add gray background to title, author, and stanza

--- a/color.html
+++ b/color.html
@@ -33,9 +33,11 @@
   </div>
   <a class="btn-large waves-effect waves-light center-element hide" id="beginBtn">Begin</a>
   <div id="poem">
-    <h1 class="white-text hide" id="title"></h1>
-    <h2 class="white-text hide" id="poet"></h2>
-    <p class="white-text flow-text" id="stanza"></p>
+    <div class="z-depth-2" id="grayBackground">
+      <h1 class="white-text hide" id="title"></h1>
+      <h2 class="white-text hide" id="poet"></h2>
+      <p class="white-text flow-text" id="stanza"></p>
+    </div>
   </div>
 </body>
 </html>
