Replace about with custom

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <a href="#" data-activates="nav-mobile" class="button-collapse white-text"><i class="material-icons">menu</i></a>
         <!-- Desktop navigation -->
         <ul class="right hide-on-med-and-down">
-          <li><a href="#searchModal" class="modal-trigger search white-text"><i class="material-icons left">search</i>search</a></li>
-          <li><a href="#customModal" class="modal-trigger custom white-text"><i class="material-icons left">info_outline</i>custom</a></li>
+          <li><a href="#searchModal" class="search white-text"><i class="material-icons left">search</i>search</a></li>
+          <li><a href="#customModal" class="custom white-text"><i class="material-icons left">description</i>custom</a></li>
           <li><a href="#" class="btn waves-effect waves-light rounded-corners no-uppercase red random">random poem</a></li>
         </ul>
         <!-- Hamburger menu (mobile) navigation -->
         <ul class="side-nav" id="nav-mobile">
-          <li><a href="#searchModal" class="modal-trigger search">Search</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#searchModal" class="search">Search</a></li>
+          <li><a href="#customModal" class="custom">Custom</a></li>
           <li><a href="#">Random</a></li>
         </ul>
       </div> <!-- end container -->
@@ -108,30 +108,14 @@
       <div class="section">
         <h4 class="grey-text text-lighten-3">Search for a Specific Poem</h4>
         <p class="grey-text text-darken-4">Filter by poet, title, length, or a combination of the former</p>
-        <a class="waves-effect waves-light btn-large rounded-corners red lighten-1"><i class="material-icons left">search</i> Begin Search</a>
+        <a href="#searchModal" class="waves-effect waves-light btn-large rounded-corners red lighten-1 search"><i class="material-icons left">search</i> Begin Search</a>
       </div> <!-- end section -->
       <div class="section bottom-padding">
         <h4 class="grey-text text-lighten-3">Enter Your Own Poem</h4>
         <p class="grey-text text-darken-4">Analyze custom text that is 1000 (placeholder) characters or less</p>
-        <a class="waves-effect waves-light btn-large rounded-corners red lighten-1"><i class="material-icons left">input</i> Enter Text</a>
+        <a href="#customModal" class="waves-effect waves-light btn-large rounded-corners red lighten-1 custom"><i class="material-icons left">input</i> Enter Text</a>
       </div> <!-- end section -->
     </div> <!-- end blue-grey div -->
-    <div class="grey darken-4">
-      <div class="section center-align">
-        <h2 class="grey-text text-lighten-3" id="about">How it Works</h2>
-      </div> <!-- end section -->
-    </div> <!-- end grey div -->
-    <div class="blue-grey center-align">
-      <div class="section container">
-        <h4 class="grey-text text-lighten-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo repudiandae, quos similique. Dolore a enim ipsam minus, consequatur sequi ea, tempora atque eveniet aut vitae corrupti sapiente veniam similique at.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci illo, id veniam pariatur perferendis sed. Perspiciatis dolorem iste facere veritatis, autem aperiam. Ullam repellat in, officiis repellendus consectetur voluptatum enim!
-        </p>
-      </div>
-    </div>
   </main>
   <footer class="page-footer grey darken-4" id="no-top-margin">
     <div class="container">
@@ -142,8 +126,8 @@
         </div> <!-- end column -->
         <div class="col m4 offset-m2 s12">
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#about">About</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Search</a></li>
+            <li><a class="grey-text text-lighten-3 search" href="#searchModal">Search</a></li>
+            <li><a class="grey-text text-lighten-3 custom" href="#customModal">Custom</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Random</a></li>
           </ul>
         </div> <!-- end column -->
