Modify tone definitions

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="card emotion-card blue-grey darken-2">
             <div class="card-content white-text">
               <span class="card-title green-text text-lighten-3">Fear</span>
-              <p>an unpleasant emotion caused by the belief that someone or something is dangerous, likely to cause pain, or a threat</p>
+              <p>a distressing emotion aroused by impending danger, evil, pain, or something else</p>
             </div>
           </div> <!-- end card -->
         </div> <!-- end column -->
@@ -80,7 +80,7 @@
           <div class="card emotion-card blue-grey darken-2">
             <div class="card-content white-text">
               <span class="card-title yellow-text text-lighten-3">Joy</span>
-              <p>a feeling of great pleasure and happiness</p>
+              <p>great delight or happiness caused by something exceptionally good or satisfying</p>
             </div>
           </div> <!-- end card -->
         </div> <!-- end column -->
