Add character limit to custom text input

--- a/index.html
+++ b/index.html
@@ -206,13 +206,13 @@
       <h3>Enter custom text</h3>
       <br>
       <div class="input-field col s12">
-        <textarea id="customText" class="materialize-textarea" length="1000" placeholder="Enter custom text less than 1000 characters.
+        <textarea id="customText" class="materialize-textarea" length="2000" placeholder="Enter custom text less than 1000 characters.
 Stanzas should be separated by blank lines."></textarea>
         <label for="customText">Custom Text</label>
       </div>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-light btn-flat">Submit</a>
+      <button disabled class="btn red lighten-2 btn-flat" id="customTextSubmit">Search</button>
     </div>
   </div>
 </body>
