Add ability to send custom text to be colored

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <br>
       <div class="input-field col s12">
         <textarea id="customText" class="materialize-textarea" length="2000" placeholder="Enter custom text less than 1000 characters.
-Stanzas should be separated by blank lines."></textarea>
+Stanzas should be separated by blank lines." wrap="hard"></textarea>
         <label for="customText">Custom Text</label>
       </div>
     </div>
