Create left and right arrows for page navigation

--- a/color.html
+++ b/color.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Colorful</title>
+  <!-- Import Google Icon Font -->
+  <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- CSS -->
   <!-- Import Materialize CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
@@ -32,6 +34,14 @@
     </div>
   </div>
   <a class="btn-large waves-effect waves-light center-element hide" id="beginBtn">Begin</a>
+
+  <div class="arrow previous valign-wrapper">
+    <i class="material-icons white-text arrow-text">chevron_left</i>
+  </div>
+  <div class="arrow next valign-wrapper">
+    <i class="material-icons white-text arrow-text">chevron_right</i>
+  </div>
+  
   <div id="poem">
     <div class="z-depth-4" id="grayBackground">
       <h1 class="white-text hide" id="title"></h1>
