Create link to go back to homepage

--- a/color.html
+++ b/color.html
@@ -26,13 +26,7 @@
   <script type="text/javascript" src="js/color.js" defer></script>
 </head>
 <body>
-  <div id="particles-js">
-    <!-- <div class="container">
-      <div class="progress">
-        <div class="indeterminate"></div>
-      </div>
-    </div> -->
-  </div>
+  <div id="particles-js"></div>
 
   <div class="center-element" id="loader">
     <div class="preloader-wrapper big active">
@@ -50,6 +44,10 @@
 
   <a class="btn-large waves-effect waves-light center-element hide" id="beginBtn">Begin</a>
 
+  <div class="back-button close">
+    <a href="index.html"><i class="material-icons white-text close-text">close</i></a>
+  </div>
+
   <div class="arrow previous valign-wrapper">
     <i class="material-icons white-text arrow-text">chevron_left</i>
   </div>
@@ -64,5 +62,6 @@
       <p class="white-text flow-text" id="stanza"></p>
     </div>
   </div>
+
 </body>
 </html>
