Add tone text indicator in upper right

--- a/color.html
+++ b/color.html
@@ -44,8 +44,12 @@
 
   <a class="btn-large waves-effect waves-light center-element hide" id="beginBtn">Begin</a>
 
-  <div class="back-button close">
+  <div class="close">
     <a href="index.html"><i class="material-icons white-text close-text">close</i></a>
+  </div>
+
+  <div class="tone">
+    <h4 class="tone-text grey-text text-lighten-1"></h4>
   </div>
 
   <div class="arrow previous valign-wrapper">
