--- a/color.html
+++ b/color.html
@@ -44,18 +44,18 @@
 
   <a class="btn-large waves-effect waves-light center-element hide" id="beginBtn">Begin</a>
 
-  <div class="close">
+  <div class="nav-buttons close-button">
     <a href="index.html"><i class="material-icons white-text close-text">close</i></a>
   </div>
 
-  <div class="tone">
-    <h4 class="tone-text grey-text text-lighten-1"></h4>
+  <div class="nav-buttons tone">
+    <h4 class="tone-text grey-text text-lighten-1">TEXT</h4>
   </div>
 
-  <div class="arrow previous valign-wrapper">
+  <div class="nav-buttons arrow previous valign-wrapper">
     <i class="material-icons white-text arrow-text">chevron_left</i>
   </div>
-  <div class="arrow next valign-wrapper">
+  <div class="nav-buttons arrow next valign-wrapper">
     <i class="material-icons white-text arrow-text">chevron_right</i>
   </div>
 
